--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>"hello this is medo"</h1>
+    <h1>"hello this testing"</h1>
+    hello in testing
      <script src="app.js"></script>
 </body>
 </html>
